package eapli.base.questionnaire.repository;

import eapli.base.questionnaire.domain.Answer.Answer;
import eapli.framework.domain.repositories.DomainRepository;

public interface AnswerRepository extends DomainRepository<String, Answer> {
}
